--- a/Estilos/Style.css
+++ b/Estilos/Style.css
@@ -52,7 +52,7 @@ h1,p {
 
 .descripción2 {
     margin-top: 20px;
-    background-color: hsl(0, 0%, 50%);
+    background-color: rgb(255, 221, 227);
     margin-right: 20px;
     margin-left: 20px;
     
@@ -62,4 +62,5 @@ h1,p {
     font-weight: 400;
     font-family: "Outfit", sans-serif;
     text-align: justify;
+    margin: 10px;
 }
