--- a/Estilos/Style.css
+++ b/Estilos/Style.css
@@ -55,14 +55,15 @@ h1,p {
     background-color: rgb(252, 232, 236);
     margin-right: 20px;
     margin-left: 20px;
-    
+    border-radius: 10px;
 }
 
 .articulo {
     font-weight: 400;
     font-family: "Outfit", sans-serif;
     text-align: justify;
-    margin: 10px;
+    padding: 20px;
+    
 }
 h3{
     color: violet;
