--- a/Estilos/Style.css
+++ b/Estilos/Style.css
@@ -79,5 +79,8 @@ h1,p {
     font-family: "Outfit", sans-serif;
 }
 .descripción3 ::marker{
-
+    color: crimson;
+}
+.descripción3 h3{
+    color: crimson;
 }
